# we-up

./: Cargo.toml  Dioxus.toml
src/: main.rs
src/api/: api.rs
src/components/: nav.rs
