[package]
name = "we-up"
version = "0.1.0"
authors = ["SkylerBanana <Skyler_Banana@protonmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.5", features = ["desktop", "router"] }
tokio = { version = "1.39.1", features = ["full"] }
reqwest = { version = "0.12.5", features = ["json"] }
serde_json = "1.0.120"
serde = { version = "1.0", features = ["derive"] }
dioxus-free-icons = { version = "0.8", features = ["font-awesome-brands"] }

# Debug
tracing = "0.1.40"
dioxus-logger = "0.5.0"
async-recursion = "1.1.1"
futures = "0.3.30"
yahoo_finance_api = "2.2.1"
